--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -153,6 +153,10 @@
       <p>{{ model.description }}</p>
     </a>
   </template>
+  <template id="teacher-rate">
+    <h1>{{model.name}}</h1>
+    <ul></ul>
+  </template>
   <template id="student-task">
     <h1>{{ model.title }}</h1>
     <h2>{{ model.group }}</h2>
