--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -224,6 +224,9 @@
     <script src="/js/StudentAbstractTask.js"></script>
     <script src="/js/StudentApplication.js"></script>
     <script src="/js/Solution.js"></script>
+    <script src="/js/TeacherApplication.js"></script>
+    <script src="/js/router.js"></script>
+    <script src="/js/models.js"></script>
     <script src="/js/app.js"></script>
   </body>
 </html>
